--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
           margin-bottom: 0;
           border-radius: 0;
         }
+
+
         
         /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
         .row.content {height: 2100px}
@@ -126,7 +128,7 @@
 
           <div id="littlebox">
                 <div class="q1container">
-                <h3 class="questions">How many games against Florida did Peyton Manning win while he played for the University of Tennessee?</h3>
+                <h3 class="questions">How many games against Florida did Peyton Manning win while at the University of Tennessee?</h3>
                 <div class="custom-control custom-control-inline custom-radio" id="q1a1">
                         <input type="radio" class="custom-control-input" id="defaultInline1" name="q1radios">
                         <label class="custom-control-label" for="defaultInline1">0</label>
